# diff_test

./: .gitignore  CMakeLists.txt  README.md  install_casadi.sh  testgit1.txt  testgit2.txt
.kdev4/: casadi_test.kdev4
logs/: Untitled Diagram.drawio  async_log.txt  multisink.txt
src/: casadi_test.cc  casadi_test.cpp  casadi_test2.cpp  cc_test.cc  ipopt_test.cc  osqp_eigen_test.cc  spdlog2file.cc  test_perf  test_perf.cc  test_spdlog.cc
src/B_test/: CMakeLists.txt  b_spline.py
src/Bezier_path/: CMakeLists.txt  bezier_arc_parameterized.cc  circle_arc_parameterized.cc
src/Bezier_path/include/: arc.hpp  bezier.hpp  compare.hpp  curve.hpp
src/OpenCV_test/: CMakeLists.txt  arc_draw.cc  clamp_spline.cc
src/acado_test/: CMakeLists.txt  acado_test.cc
src/casadi_test/: CMakeLists.txt  casadi_test.cc  transform_data.cc
src/cc_test/: CMakeLists.txt  recursion.cc
src/cc_test/Floyd/: Graph.h  floydlib  floydlib.cc
src/cc_test/modernCC/: function_test.cc  lambda_test.cc  share_test.cc
src/cmake_test/: CMakeLists.txt
src/cmake_test/install/: CMakeLists.txt  install.cc
src/cmake_test/install/math/: CMakeLists.txt
src/cmake_test/set/: listNode.cc  set1.cc  set2.cc  test_angle.cc
src/cmake_test/share_mem/: share_read.cc  share_write.cc
src/eigen_test/: eigen_test.cc
src/glog_test/: CMakeLists.txt  test_glog.cc
src/multi_thread/: CMakeLists.txt  boost_bind_test.cc  class_boost.cc  future.cc  http_download.cc  package_task.cc  priority.cc  producer_consummer.cc  promise_future.cc  promise_future2.cc  read_write.cc  test.cc  test_band.cc  test_mutex.cc  test_thread.h  timer.cc
src/multi_thread/tasks/: producer_consummer.cc  thread_pool.cc
src/nlopt_test/: CMakeLists.txt  nlopt_test  nlopt_test1.cc
src/ompl_test/: CMakeLists.txt  dubins.cc  dubins2.cc  grid_map.txt  kinomaticCarPath.cc  mpplot.py  mpplot2.py  rrt.cc  rrt_obstacle.cc  rrt_obstacle.py  rrtstar.cc
src/onnxruntime/: CMakeLists.txt  test.cc
src/onnxruntime/cmake/: onnxruntimeVersion.cmake
src/pcl_test/: CMakeLists.txt  readme.md
src/pcl_test/01view/: show.cc  viewr.cc
src/pcl_test/02pcl_common/: transform.cc
src/pcl_test/03io/: io.cc
src/pcl_test/04topology/: kd_tree.cc  octree.cc
src/pcl_test/05sample/: ransac.cc
src/pcl_test/06Depth_image/: pc2image.cc  range2border.cc  read_path.cc
src/pcl_test/09filtering/: condition.cc  direct_pass.cc
src/pcl_test/12segmentation/: plane_cube.cc  plane_pcl_split.cc
src/pcl_test/include/: pcl_type.h  tool.h
src/pinocco_test/: CMakeLists.txt
src/pinocco_test/pin_teach/: arm.urdf  dyna2.cpp  dynamic.cc  dynamic.cpp  invkinetic.cc  invkinetic.cpp  kinetic.cc  kinetic.cpp
src/protobuf_test/: Address.pb.h  Address.proto  CMakeLists.txt  Person.pb.cc  Person.pb.h  Person.proto  Readme.md  file.cc
src/protobuf_test/serialize_de/: Address.pb.cc  CMakeLists.txt  file.cc
src/test_global_variable/: Derive.cpp  Derive2.cpp  globalVariable.cpp  global_incl.h
